Add favicon and astro-icon

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -3,11 +3,13 @@ layout: ../layouts/BaseLayout.astro
 title: About
 ---
 
+import { Icon } from "astro-icon";
+
 # About
 
 This is some technical stuff, so if you don't care about how this site was _made_, don't read it.
 
-This site was built using <span class="astro-link">[Astro](https://astro.build/)</span> in an effort to accomplish a few things:
+This site was built using <Icon name="vscode-icons:file-type-astro"/>[Astro](https://astro.build/) in an effort to accomplish a few things:
 
 - Keep the JavaScript payload small and keep things minimal.
 - Have the ability to edit site content with Markdown.
