Alias layouts and components

--- a/src/pages/blog/building-this-site.mdx
+++ b/src/pages/blog/building-this-site.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/BlogLayout.astro
+layout: "@layouts/BlogLayout.astro"
 title: "Building this site"
 description: "My thoughts on Astro & the process of building a site with it."
 date: "Nov. 25, 2022"
