--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -26,4 +26,4 @@ free to reach out to me at [contact@joshuaburer.com](mailto:contact@joshuaburer.
 
 This site was built using <Icon name="vscode-icons:file-type-astro"/>[Astro](https://astro.build/), and is hosted on Github Pages!
 
-For more detailed information on how this site was built, check out my [blog post about it.](/blog/building-this-site/)
+{/* For more detailed information on how this site was built, check out my [blog post about it.](/blog/building-this-site/) */}
