Wording changes, add 3 portfolio entries

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -9,17 +9,16 @@ import { Icon } from "astro-icon";
 
 Hi! 👋 Thanks for checking out my website.
 
-In case you're here wondering about me: I'm Josh, a full-time software engineer
-and computer science major currently pursuing a Bachelor's in Computer Science 💻 at Georgia Tech.
+I'm Josh, a full-time software engineer and computer science major currently 
+pursuing a Bachelor's in Computer Science 💻 at Georgia Tech, set to graduate in December 2024.
 
 In my programming endeavors, I work full-stack. I have experience using Django
 on the backend and various JavaScript frameworks on the frontend, especially React.
 
-Aside from work or school, I love programming, guitar, video games, and I hope to be an avid reader.
-
+Aside from work or school, I love programming, guitar, video games, and reading. 
 I am a member of [Christ Church of South Metro Atlanta](https://www.christsma.org/) in Tyrone, GA.
 
-If you have any questions about me, my skills, my church, or anything else, feel
+If you have any questions about me, my skills, or anything else, feel
 free to reach out to me at [contact@joshuaburer.com](mailto:contact@joshuaburer.com)!
 
 ---
