--- a/src/pages/portfolio/1-morris.mdx
+++ b/src/pages/portfolio/1-morris.mdx
@@ -2,14 +2,14 @@
 layout: "@layouts/PortfolioLayout.astro"
 title: "Morris Technology"
 description: "Professional experience working in full-stack web development."
-date: "Jan 2021 - Present"
+date: "Jan 2021 - Aug 2024"
 ---
 
 # Morris Technology
 
 
 ## Lead Developer (Full-Time)
-_November 2022 - Present_
+_November 2022 - Aug 2024_
 
 In my current role as Lead Developer, I oversee the full-stack development of web-based CMS applications utilizing Django and React.
 My responsibilities have expanded to include leading the development of internal tools for publication and subscription management.
