Minor updates, remove portfolio

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -9,13 +9,13 @@ import { Icon } from "astro-icon";
 
 Hi! 👋 Thanks for checking out my website.
 
-I'm Josh, a full-time software engineer and computer science major currently 
-pursuing a Bachelor's in Computer Science 💻 at Georgia Tech, set to graduate in December 2024.
+I'm Josh, a full-time software engineer and with a Bachelor's in Computer Science 💻 at Georgia Tech.
 
 In my programming endeavors, I work full-stack. I have experience using Django
-on the backend and various JavaScript frameworks on the frontend, especially React.
+and FastAPI on the backend and various JavaScript/TypeScript frameworks on the frontend,
+especially React.
 
-Aside from work or school, I love programming, guitar, video games, and reading. 
+I love programming, guitar, video games, and reading.
 I am a member of [Christ Church of South Metro Atlanta](https://www.christsma.org/) in Tyrone, GA.
 
 If you have any questions about me, my skills, or anything else, feel
