Update dependencies, fix Icon

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -3,13 +3,13 @@ layout: "@layouts/BaseLayout.astro"
 title: About
 ---
 
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 
 # About Me
 
 Hi! 👋 Thanks for checking out my website.
 
-I'm Josh, a full-time software engineer and with a Bachelor's in Computer Science 💻 at Georgia Tech.
+I'm Josh, a full-time software engineer with a Bachelor's in Computer Science 💻 at Georgia Tech.
 
 In my programming endeavors, I work full-stack. I have experience using Django
 and FastAPI on the backend and various JavaScript/TypeScript frameworks on the frontend,
