--- a/src/pages/blog/building-this-site.mdx
+++ b/src/pages/blog/building-this-site.mdx
@@ -5,7 +5,7 @@ description: "My thoughts on Astro & the process of building a site with it."
 date: "Nov. 25, 2022"
 ---
 
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 
 # Building this site
 
