Fix footer icons

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,18 +11,13 @@ Hi! 👋 Thanks for checking out my website.
 
 I'm Josh, a full-time software engineer with a Bachelor's in Computer Science 💻 at Georgia Tech.
 
-In my programming endeavors, I work full-stack. I have experience using Django
-and FastAPI on the backend and various JavaScript/TypeScript frameworks on the frontend,
-especially React.
+Professionally: I have experience using Django and FastAPI on the backend and various JavaScript/TypeScript
+frameworks on the frontend, especially React. This site was built
+using <Icon name="vscode-icons:file-type-astro"/>[Astro](https://astro.build/), and is hosted on Github Pages!
 
-I love programming, guitar, video games, and reading.
-I am a member of [Christ Church of South Metro Atlanta](https://www.christsma.org/) in Tyrone, GA.
+Personally: I love building software and playing guitar. I am a member of [Christ Church of South Metro Atlanta](https://www.christsma.org/) in Tyrone, GA.
 
 If you have any questions about me, my skills, or anything else, feel
 free to reach out to me at [contact@joshuaburer.com](mailto:contact@joshuaburer.com)!
 
 ---
-
-This site was built using <Icon name="vscode-icons:file-type-astro"/>[Astro](https://astro.build/), and is hosted on Github Pages!
-
-{/* For more detailed information on how this site was built, check out my [blog post about it.](/blog/building-this-site/) */}
